--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zad</title>
+    <title>مركز الامتحانات</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="Site Logo" id="logo">
+        <img src="logoo.png" alt="Site Logo" id="logo">
         <h1>الحصول على باسورد مركز الامتحانات</h1>
     </header>
     <div class="search-container">
@@ -35,6 +35,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
